# lightweight-human-pose-estimation.pytorch-AMD

./: .gitignore  FILETREE.md  README.md  README_fused_pruned_v2.md  accuracy_validation.py  accuracy_validation_core.py  accuracy_validation_manual_cubic_mx_topk.py  accuracy_validation_mx_fused_postprocess.py  accuracy_validation_mx_paf_fullres_pair_scorer.py  accuracy_validation_mx_paf_pair_scorer.py  accuracy_validation_resize_nms_topk.py  accuracy_validation_smart.py  benchmark_migraphx.py  benchmark_postprocess_accuracy_with_gpu_acc.py  benchmark_postprocess_variants.py  benchmark_singleprocess_e2e_power.py  benchmark_singleprocess_e2e_power_detailed.csv  benchmark_singleprocess_e2e_power_report.md  benchmark_singleprocess_e2e_power_summary.csv  benchmark_singleprocess_e2e_power_summary.json  compile_migraphx_static_batches.py  compile_pruned_from_existing_onnx.py  export_dynamic_onnx.py  export_onnx_graph_clean.py  make_filetree.py  run_mx_merged_stream_grid.py  simulate_10_camera_stream.py  simulate_10_camera_stream_batched.py  simulate_camera_stream.py  speed_validation.py  speed_validation_pose_batch_existing.py  val.py  video_val.py
benchmark/: accuracy_on_migprahx  bench_infer.py  benchmark_migraphx.py  benchmark_migraphx_fast.py  benchmark_migraphx_video.py  benchmark_postprocess_models_report_powerfix.py  benchmark_postprocess_variants.py  benchmark_results.csv  benchmark_results_MIGraphX_optimized.csv  benchmark_results_kernel_tuned.csv  (+7 more)
cpp/heatmap_topk_hip/: CMakeLists.txt  README.md  heatmap_topk_hip.cpp  heatmap_topk_hip.h  heatmap_topk_hip_fused.cpp  heatmap_topk_hip_profile.cpp  heatmap_topk_hip_smart.cpp
(+156 files in other folders)
